tests/snapshots/sfc/ts/script_setup__template_with_inline_handler.snap
---
source: crates/vue_compiler_sfc/src/snapshot_tests.rs
assertion_line: 98
expression: ts_output
---
import { defineComponent } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock, toDisplayString as _toDisplayString } from "vue"

import { ref } from 'vue'

export default defineComponent({
  name: 'test',
  setup(__props) {

const count = ref(0)

return (_ctx, _cache) => {
  return (_openBlock(), _createElementBlock("button", { onClick: $event => (count.value++) }, _toDisplayString(count.value), 9 /* TEXT, PROPS */, ["onClick"]))
}
}

})
