tests/snapshots/sfc/ts/script_setup__top_level_await_with_destructuring.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output
---
import { defineComponent as _defineComponent } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock, createCommentVNode as _createCommentVNode, toDisplayString as _toDisplayString, unref as _unref } from "vue"


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  async setup(__props) {

const { data, error } = await useFetch('/api/data')

return (_ctx: any,_cache: any) => {
  return (_unref(error))
      ? (_openBlock(), _createElementBlock("div", { key: 0 }, "Error: " + _toDisplayString(_unref(error)), 1 /* TEXT */))
      : (_openBlock(), _createElementBlock("div", { key: 1 }, _toDisplayString(_unref(data)), 1 /* TEXT */))
}
}

})
