tests/snapshots/sfc/ts/script_setup__watch_and_watcheffect.snap
---
source: crates/vue_compiler_sfc/src/snapshot_tests.rs
assertion_line: 98
expression: ts_output
---
import { defineComponent } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock, toDisplayString as _toDisplayString } from "vue"

import { ref, watch, watchEffect } from 'vue'

export default defineComponent({
  name: 'test',
  setup(__props) {

const count = ref(0)
watch(count, (n) => console.log(n))
watchEffect(() => console.log(count.value))

return (_ctx, _cache) => {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString(count.value), 1 /* TEXT */))
}
}

})
